# homething

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  components.yml  esp8266_rtos_sdk_v3_4.patch  gencomponents.py  idf_ext.py  requirements.txt  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp8266-flash1mb  sdkconfig.esp8266-flash4mb  sdkconfig.flash1mb  sdkconfig.flash4mb  updateprofile.py
.github/workflows/: build.yml  settings.esp32  settings.esp8266-flash1mb  settings.esp8266-flash4mb
components/: component.mk
components/bootprot/: CMakeLists.txt  bootprot.c
components/bootprot/include/: bootprot.h
components/cn-cbor/: CMakeLists.txt
components/cn-cbor/include/: cn-cbor  cn-cbor.h
components/cyaml/: CMakeLists.txt
components/deviceprofile/: CMakeLists.txt  component_config.c  component_config_internal.h  deserialize.c  deviceprofile.c  field_types_used.h
components/deviceprofile/include/: component_config.h  deviceprofile.h
components/dht/: dht.c
components/dht/include/: dht.h
components/dht22/: CMakeLists.txt  dht.c
components/dht22/include/: dht.h
components/doorbell/: CMakeLists.txt  doorbell.c
components/doorbell/include/: doorbell.h
components/draytonscr/: CMakeLists.txt  draytonscr.c
components/draytonscr/include/: draytonscr.h
components/gpiox/: CMakeLists.txt  Kconfig.projbuild  gpiox.c
components/gpiox/include/: gpiox.h
components/homeassistant/: CMakeLists.txt  homeassistant.c
components/homeassistant/include/: homeassistant.h
components/http-parser/: component.mk
components/humidityfan/: CMakeLists.txt  humidityfan.c
components/humidityfan/include/: humidityfan.h
components/iot/: CMakeLists.txt  Kconfig.projbuild  device.c  homeassistant.c  iot.c  iotInternal.h  kconfig.projbuild  mqtt.c
components/iot/include/: iot.h
components/iotDevice/: CMakeLists.txt  iotDevice.c
components/iotDevice/include/: iotDevice.h
components/light/: CMakeLists.txt  light.c
components/light/include/: light.h
components/logging/: CMakeLists.txt  logging.c
components/logging/include/: logging.h
components/motion/: CMakeLists.txt  motion.c
components/motion/include/: motion.h
components/notificationled/: CMakeLists.txt  notificationled.c
components/notificationled/include/: notificationled.h
components/notifications/: CMakeLists.txt  notifications.c
components/notifications/include/: notifications.h
components/provisioning/: CMakeLists.txt  captdns.c  components_json.c  config.c  gensettings.py  genstatic.py  provisioning.c  provisioning_int.h  settings.yml  test_settings.c  test_settings.js  webtest.py  wifi.c
components/provisioning/include/: provisioning.h
components/provisioning/static/: fonts.css  index.html  script.js  style.css
components/relay/: CMakeLists.txt  Kconfig.projbuild  lockout.c  relay.c  relays.c  timeout.c
components/relay/include/: relay.h
components/sensors/: CMakeLists.txt  Kconfig.projbuild  sensors.c  sensorsInternal.h  sensorsLight.c  sensorsTHP.c
components/sensors/include/: sensors.h
components/switch/: CMakeLists.txt  switch.c
components/switch/include/: switch.h
components/thermostat/: CMakeLists.txt  thermostat.c
components/thermostat/include/: thermostat.h
components/tinycbor/: CMakeLists.txt
components/tinycbor/include/: cbor.h  tinycbor-version.h
components/updater/: CMakeLists.txt  Kconfig.projbuild  download.c  updater.c  updaterInternal.h
components/updater/include/: updater.h
components/utils/: CMakeLists.txt  cJSON_AddOns.c  safestring.c  utils.c
components/utils/include/: cJSON_AddOns.h  safestring.h  utils.h
components/uzlib/: CMakeLists.txt
components/uzlib/include/: defl_static.h  tinf_compat.h  uzlib.h  uzlib_conf.h
components/wifi/: CMakeLists.txt  wifi.c
components/wifi/include/: wifi.h
components/yaml/: CMakeLists.txt
config/: configgen.py  example_confg.yml  newconfiggen.py  simplelight.ini  sonof_basic_r2.ini
config/homething/: constants.py  decode.py  encode.py  errors.py  parse.py
main/: CMakeLists.txt  Kconfig.projbuild  controllers.c  controllers.h  homeassistant.c  homeassistant.h  led.c  led.h  led_strips.c  led_strips.h  ota.py  profile.c  profile.h  relays.c  relays.h  sensors.c  sensors.h  switches.c  switches.h  user_main.c  version.c.in
templates/: component_config.c.jinja  component_config.h.jinja  component_config_internal.h.jinja  components_json.c.jinja  field_types_used.h.jinja
tools/: provision.py  updateprofile.py
