idf_component_register(SRCS "cn-cbor/src/cn-cbor.c"
                            "cn-cbor/src/cn-create.c"
                            "cn-cbor/src/cn-encoder.c"
                            "cn-cbor/src/cn-error.c"
                            "cn-cbor/src/cn-get.c"
                            "cn-cbor/src/cn-print.c"
                    INCLUDE_DIRS "include"
                    )
