idf_component_register(SRCS "tinycbor/src/cborencoder.c" 
                            "tinycbor/src/cborerrorstrings.c" 
                            "tinycbor/src/cborparser_dup_string.c" 
                            "tinycbor/src/cborpretty_stdio.c" 
                            "tinycbor/src/cborencoder_close_container_checked.c" 
                            "tinycbor/src/cborparser.c" 
                            "tinycbor/src/cborpretty.c" 
                            "tinycbor/src/cbortojson.c" 
                    INCLUDE_DIRS "include"
                    )
